# tgv_web

./: .gitignore  Cargo.toml  README  README.md  Trunk.toml  index.html  rust-toolchain.toml
.github/workflows/: gh-pages-deploy.yml
.github_tmp/workflows/: gh-pages-deploy.yml
assets/: _headers
src/: main.rs  main_old.rs  tgv.rs
